[project]
name = "fastapi-github-gists"
version = "0.1.0"
description = "A FastAPI server to list a user's publicly available GitHub Gists."
readme = "README.md"
authors = [
    {name = "Munyaradzi Tafirenyika", email = "tafymunya@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

# Core application dependencies:
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx", # The asynchronous HTTP client used in main.py
]

[project.optional-dependencies]
test = [
    "pytest",            
    "pytest-asyncio",    
    "respx",             
    "pytest-cov",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "black>=24.4.2",
]

# Development dependencies:
[dependency-groups]
# Define the 'test' group used by 'uv pip install -e .[test]'
test = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "pytest-cov",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "black>=24.4.2",
]

dev = [
    "uvicorn[standard]", # The server to run the app
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# This line tells pytest to add the project root (where pyproject.toml is)
# and the src directory to the PYTHONPATH before running tests.
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = ["--cov=.", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"] 

omit = [
    "src/*__init__.py", 
    "src/main.py",
    "tests/*"
]

[tool.mypy]
warn_unreachable = true
disallow_any_generics = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
# For stricter checking, you can enable the following:
# strict = true

[tool.ruff]
# Set the minimum Python version to target for compatibility.
target-version = "py311"
line-length = 90

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

[tool.ruff.lint]
# Select the rules to enable.
# E/F: pycodestyle/pyflakes (standard errors)
# I: isort (import sorting)
# B: flake8-bugbear (potential bugs)
# C4: flake8-comprehensions (unnecessary comprehensions)
# A: flake8-builtins (shadowing builtins)
# UP: pyupgrade
# S: flake bandit
# RUF : Ruff specific rules
select = ["E", "F", "I", "B", "C4", "A", "UP", "S", "RUF"]
ignore = [
    "S101",   # We don't use `python -o`, so `assert` is safe.
]
